--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     <title>Freelancer - Start Bootstrap</title>
   </head>
   <body>
-    <div class="container">
+    <nav class="navbar navbar-default">
+    <div class="container-fluid">
       <header>
+        <div class="row navbar">
 
+          <div class="col-xs-4">
+            <a class="navbar-brand" href="#">Start Bootstrap</a>
+          </div>
+        <ul class="row col-xs-6 col-xs-offset-2">
+         <li class="col-xs-4">portfolio</li>
+         <li class="col-xs-4">about</li>
+         <li class="col-xs-4">contact</li>
+       </ul>
+        </div>
       </header>
       <section class="sez0">
 
