--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Freelancer - Start Bootstrap</title>
   </head>
   <body>
-    <nav class="navbar navbar-default">
+
     <div class="container-fluid">
       <header>
         <div class="row navbar">
@@ -16,7 +16,7 @@
           <div class="col-xs-4">
             <a class="navbar-brand" href="#">Start Bootstrap</a>
           </div>
-        <ul class="row col-xs-6 col-xs-offset-2">
+        <ul class="row navbar-brand col-xs-6 col-xs-offset-2">
          <li class="col-xs-4">portfolio</li>
          <li class="col-xs-4">about</li>
          <li class="col-xs-4">contact</li>
