classi bg-blue e txt-white

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <div class="container-fluid">
       <header>
-        <div class="row navbar">
+        <div class="row navbar bg-blue txt-white">
 
           <div class="col-xs-4">
-            <a class="navbar-brand" href="#">Start Bootstrap</a>
+            <a class="navbar-brand bg-blue txt-white" href="#">Start Bootstrap</a>
           </div>
         <ul class="row navbar-brand col-xs-6 col-xs-offset-2">
          <li class="col-xs-4">portfolio</li>
@@ -23,8 +23,14 @@
        </ul>
         </div>
       </header>
-      <section class="sez0">
-
+      <section class="chisiamo row marg-top txt-white">
+        <div class="col-xs-12">
+          <img src="img/avataaars.svg" alt="">
+        </div>
+        <div class="col-xs-12">
+          <h1>start bootstrap</h1>
+          <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+        </div>
       </section>
       <section class="sez1">
 
