--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Freelancer - Start Bootstrap</title>
@@ -17,9 +19,9 @@
             <a class="navbar-brand bg-blue txt-white" href="#">Start Bootstrap</a>
           </div>
         <ul class="row navbar-brand col-xs-6 col-xs-offset-2">
-         <li class="col-xs-4">portfolio</li>
-         <li class="col-xs-4">about</li>
-         <li class="col-xs-4">contact</li>
+         <li class="col-xs-4"><a class="txt-white" href=".portfolio">portfolio</a></li>
+         <li class="col-xs-4"><a class="txt-white" href=".about">about</a></li>
+         <li class="col-xs-4"><a class="txt-white" href=".contact">contact</a></li>
        </ul>
         </div>
       </header>
@@ -29,17 +31,22 @@
         </div>
         <div class="col-xs-12">
           <h1>start bootstrap</h1>
-          <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+          <div class="row">
+            <div class="col-xs-3 col-xs-offset-2 dividers"></div>
+            <span class="col-xs-2 glyphicon glyphicon-star" aria-hidden="true"></span>
+            <div class="col-xs-3  dividers"></div>
+          </div>
+          <p class="txt-white">Graphic Artist - Web Designer - Illustrator</p>
         </div>
       </section>
-      <section class="sez1">
+      <section class="portfolio">
 
       </section>
-      <section class="sez2">
+      <section class="about">
 
       </section>
 
-      <section class="sez3">
+      <section class="contact">
 
       </section>
 
