--- a/index.html
+++ b/index.html
@@ -12,40 +12,83 @@
 
     <div class="container-fluid">
       <header>
-        <div class="row navbar bg-blue txt-white">
+        <div class="navbar navbar-left navbar-right navbar-fixed-top bg-blue txt-white">
 
           <div class="">
             <a class="navbar-brand bg-blue txt-white" href="#">Start Bootstrap</a>
           </div>
         <ul class=" navbar-brand ">
-         <li ><a class="txt-white" href="portfolio">portfolio</a></li>
-         <li ><a class="txt-white" href="about">about</a></li>
-         <li ><a class="txt-white" href="contact">contact</a></li>
+         <li ><a class="txt-white" href="#portfolio">portfolio</a></li>
+         <li ><a class="txt-white" href="#about">about</a></li>
+         <li ><a class="txt-white" href="#contact">contact</a></li>
        </ul>
         </div>
       </header>
-      <section class="chisiamo row marg-top txt-white">
-        <div class="col-xs-12">
-          <img src="img/avataaars.svg" alt="">
-        </div>
-        <div class="col-xs-12">
-          <h1>start bootstrap</h1>
-          <div class="row">
-            <div class="col-xs-2 col-xs-offset-3 dividers"></div>
-            <span class="col-xs-2 glyphicon glyphicon-star" aria-hidden="true"></span>
-            <div class="col-xs-2  dividers"></div>
+      <section id="chisiamo" class="row marg-top txt-white">
+
+          <div class="col-xs-12">
+            <img src="img/avataaars.svg" alt="">
           </div>
-          <p class="txt-white">Graphic Artist - Web Designer - Illustrator</p>
+          <div class="col-xs-12">
+            <h1>start bootstrap</h1>
+            <div class="row">
+              <div class="col-xs-2 col-xs-offset-3 dividers"></div>
+              <span class="col-xs-2 glyphicon glyphicon-star" aria-hidden="true"></span>
+              <div class="col-xs-2  dividers"></div>
+            </div>
+            <p class="txt-white">Graphic Artist - Web Designer - Illustrator</p>
+          </div>
+
+      </section>
+      <section id="portfolio">
+        <div class="row">
+          <div class="col-xs-12">
+            <h2>portfolio</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-2 col-xs-offset-3 dividers"></div>
+          <span class="col-xs-2  glyphicon glyphicon-star" aria-hidden="true"></span>
+          <div class="col-xs-2  dividers"></div>
+        </div>
+        <div class="portfolio-img">
+
+
+          <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
+              <img src="img/cabin.png" alt=""class="img-rounded">
+
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+              <img src="img/cake.png" alt=""class="img-rounded">
+
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+              <img src="img/circus.png" alt=""class="img-rounded">
+
+            </div>
+
+          
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
+              <img src="img/game.png" alt=""class="img-rounded">
+
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+              <img src="img/safe.png" alt=""class="img-rounded">
+
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+              <img src="img/submarine.png" alt=""class="img-rounded">
+
+            </div>
+          </div>
         </div>
       </section>
-      <section class="portfolio">
-
-      </section>
-      <section class="about">
+      <section id="about">
 
       </section>
 
-      <section class="contact">
+      <section id="contact">
 
       </section>
 
