--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             </div>
 
-          
+
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 ">
               <img src="img/game.png" alt=""class="img-rounded">
 
@@ -85,7 +85,25 @@
         </div>
       </section>
       <section id="about">
+        <div class="row">
+          <div class="col-xs-12">
+            <h2>about</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-2 col-xs-offset-3 dividers"></div>
+          <span class="col-xs-2 glyphicon glyphicon-star" aria-hidden="true"></span>
+          <div class="col-xs-2  dividers"></div>
+        </div>
 
+        <div class="row">
+          <div class="col-xs-12 col-md-6">
+            <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+          </div>
+        </div>
       </section>
 
       <section id="contact">
