--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
         </div>
 
         <div class="row">
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-2">
             <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
           </div>
-          <div class="col-xs-12 col-md-6">
+          <div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-1">
             <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
           </div>
         </div>
