--- a/index.html
+++ b/index.html
@@ -100,13 +100,43 @@
           <div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-2">
             <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
           </div>
-          <div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-1">
+          <div class="col-xs-8 col-xs-offset-2 col-md-4 col-md-offset-0">
             <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
           </div>
         </div>
       </section>
 
       <section id="contact">
+        <div class="row">
+          <div class="col-xs-12">
+            <h2>contact</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-2 col-xs-offset-3 dividers"></div>
+          <span class="col-xs-2 glyphicon glyphicon-star" aria-hidden="true"></span>
+          <div class="col-xs-2  dividers"></div>
+        </div>
+        <form>
+          <div class="form-group">
+            <label for="campo-name">name</label>
+            <input type="text" class="form-control" placeholder="name">
+          </div>
+          <div class="form-group">
+            <label for="campo-mail">email address</label>
+            <input type="email" class="form-control" placeholder="email">
+          </div>
+          <div class="form-group">
+            <label for="campo-phone">phone number</label>
+            <input type="numbers" class="form-control" id="exampleInputPassword1" placeholder="phone number">
+          </div>
+          <div class="form-group">
+            <label for="campo-message">message</label>
+            <textarea class="form-control" rows="3"></textarea>
+          </div>
+
+          <button type="button" class="btn btn-default">Send</button>
+        </form>
 
       </section>
 
