--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Freelancer - Start Bootstrap</title>
   </head>
@@ -141,7 +141,30 @@
       </section>
 
 
-      <footer>
+      <footer class="bg-blue">
+        <div class="row">
+          <div class="col-xs-12 col-md-4">
+            <h3>LOCATION</h3>
+            <p>2215 John Daniel Drive Clark, MO 65243</p>
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <h3>AROUND THE WEB</h3>
+            <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
+
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <h3>ABOUT FREELANCER</h3>
+            <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap.</p>
+          </div>
+        </div>
+        <div id="copyright"class="row">
+          <div class="col-xs-12">
+            <p>Copyright © Your Website 2019</p>
+          </div>
+        </div>
 
       </footer>
     </div>
