--- a/index.html
+++ b/index.html
@@ -149,11 +149,14 @@
           </div>
           <div class="col-xs-12 col-md-4">
             <h3>AROUND THE WEB</h3>
-            <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
+            <div class="icons">
 
+
+              <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
+              <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
+            </div>
           </div>
           <div class="col-xs-12 col-md-4">
             <h3>ABOUT FREELANCER</h3>
