--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 
     <div class="container-fluid">
       <header>
-        <div class="navbar navbar-left navbar-right navbar-fixed-top bg-blue txt-white">
-
-          <div class="">
-            <a class="navbar-brand bg-blue txt-white" href="#">Start Bootstrap</a>
-          </div>
-        <ul class=" navbar-brand ">
-         <li ><a class="txt-white" href="#portfolio">portfolio</a></li>
-         <li ><a class="txt-white" href="#about">about</a></li>
-         <li ><a class="txt-white" href="#contact">contact</a></li>
-       </ul>
+        <div class="navbar  navbar-left navbar-right navbar-fixed-top bg-blue txt-white">
+          <a class="navbar-brand bg-blue txt-white" href="#">Start Bootstrap</a>
+          <ul class=" navbar-brand navbar-right  collapse navbar-collapse">
+           <li ><a class="txt-white" href="#portfolio">portfolio</a></li>
+           <li ><a class="txt-white" href="#about">about</a></li>
+           <li ><a class="txt-white" href="#contact">contact</a></li>
+          </ul>
+          <button type="button" class="collapsed" data-toggle="collapse"  aria-expanded="false">
+            <span class="sr-only"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+          </button>
         </div>
       </header>
       <section id="chisiamo" class="row marg-top txt-white">
@@ -104,12 +107,17 @@
             <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
           </div>
         </div>
+        <div class="row">
+          <div class="col-xs-12">
+            <button type="button" name="button"><i class="fa fa-download" aria-hidden="true"></i>Free Download!</button>
+          </div>
+        </div>
       </section>
 
       <section id="contact">
         <div class="row">
           <div class="col-xs-12">
-            <h2>contact</h2>
+            <h2>contact me</h2>
           </div>
         </div>
         <div class="row">
