--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
            <li ><a class="txt-white" href="#about">about</a></li>
            <li ><a class="txt-white" href="#contact">contact</a></li>
           </ul>
-          <button type="button" class="collapsed" data-toggle="collapse"  aria-expanded="false">
-            <span class="sr-only"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+          <button type="button">
+
           </button>
         </div>
       </header>
